Added new controllers for new tables